--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "core-js": "^3.6.5",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "~13.1.0",
-    "core-js": "^3.6.5",
+    "igniteui-angular-charts": "~13.2.0",
+    "igniteui-angular-core": "~13.2.0",
     "jszip": "^3.5.0",
     "minireset.css": "~0.0.4",
     "rxjs": "~7.5.0",
